--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "url": "https://github.com/iceddev/pagenodes-nodes/issues"
   },
   "dependencies": {
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-0": "^6.16.0",
     "bcryptjs": "^2.3.0",
     "body-parser": "1.14.1",
     "brace": "^0.8.0",
@@ -37,16 +40,17 @@
     "level-fs-browser": "^1.0.0",
     "localforage": "^1.3.0",
     "lodash": "^4.13.1",
-    "meshblu": "^1.33.1",
+    "meshblu": "^1.34.1",
     "meshblu-virtual-serial": "^1.1.0",
     "mqtt": "^1.11.0",
     "mqtt-serial": "^0.5.0",
     "mustache": "2.2.0",
+    "node-rsa": "^0.4.2",
     "nopt": "3.0.4",
     "raw-loader": "^0.5.1",
     "rest": "^2.0.0",
     "semver": "5.0.3",
-    "sentiment": "0.2.3",
+    "sentiment": "^2.1.0",
     "skynet-serial": "^1.2.0",
     "socket.io-client": "^1.3.7",
     "socket.io-parser": "^2.2.6",
