--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "mqtt": "^1.11.0",
     "mqtt-serial": "^0.5.0",
     "mustache": "2.2.0",
-    "noble": "github:monteslu/noble",
+    "noble": "^1.8.1",
     "node-rsa": "^0.4.2",
     "nopt": "3.0.4",
     "raw-loader": "^0.5.1",
