--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pagenodes-nodes",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "node definitions for pagenodes",
   "main": "index.js",
   "scripts": {
@@ -46,6 +46,7 @@
     "eslint": "^3.1.1",
     "firmata": "^0.17.0",
     "gifshot": "^0.3.2",
+    "irc": "^0.5.2",
     "is-utf8": "^0.2.0",
     "json-loader": "^0.5.3",
     "level-fs-browser": "^1.0.0",
