--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
     "browser-serialport": "^2.0.3",
     "ecstatic": "^1.1.3",
     "eslint": "^3.1.1",
-    "firmata": "^0.17.0",
     "gifshot": "^0.3.2",
     "irc": "^0.5.2",
     "is-utf8": "^0.2.0",
@@ -52,8 +51,6 @@
     "level-fs-browser": "^1.0.0",
     "localforage": "^1.3.0",
     "lodash": "^4.13.1",
-    "meshblu": "^1.34.1",
-    "meshblu-virtual-serial": "^1.1.0",
     "mqtt": "^1.11.0",
     "mqtt-serial": "^0.5.0",
     "mustache": "2.2.0",
@@ -64,8 +61,6 @@
     "rest": "^2.0.0",
     "semver": "5.0.3",
     "sentiment": "^2.1.0",
-    "serialport": "^4.0.7",
-    "skynet-serial": "^1.2.0",
     "socket.io-client": "^1.3.7",
     "socket.io-parser": "^2.2.6",
     "splidi-serial": "^0.1.0",
@@ -73,6 +68,10 @@
     "webusb-serial": "^0.3.0",
     "when": "3.7.4",
     "xml2js": "0.4.13"
+  },
+  "optionalDependenices": {
+    "serialport": "^4.0.7",
+    "firmata": "^0.17.0"
   },
   "homepage": "https://github.com/iceddev/pagenodes-nodes#readme"
 }
