--- a/package.json
+++ b/package.json
@@ -35,43 +35,6 @@
     "chai": "^3.5.0",
     "mocha": "^2.4.5"
   },
-  "dependencies": {
-    "bcryptjs": "^2.3.0",
-    "ble-serial": "^0.4.1",
-    "body-parser": "1.14.1",
-    "brace": "^0.8.0",
-    "browser-process-hrtime": "^0.1.2",
-    "browser-serialport": "^2.0.3",
-    "ecstatic": "^1.1.3",
-    "eslint": "^3.1.1",
-    "gifshot": "^0.3.2",
-    "irc": "^0.5.2",
-    "is-utf8": "^0.2.0",
-    "json-loader": "^0.5.3",
-    "level-fs-browser": "^1.0.0",
-    "localforage": "^1.3.0",
-    "lodash": "^4.13.1",
-    "mqtt": "^1.11.0",
-    "mqtt-serial": "^0.5.0",
-    "mustache": "2.2.0",
-    "noble": "^1.8.1",
-    "node-rsa": "^0.4.2",
-    "nopt": "3.0.4",
-    "raw-loader": "^0.5.1",
-    "rest": "^2.0.0",
-    "semver": "5.0.3",
-    "sentiment": "^2.1.0",
-    "socket.io-client": "^1.3.7",
-    "socket.io-parser": "^2.2.6",
-    "splidi-serial": "^0.1.0",
-    "supertest": "1.1.0",
-    "webusb-serial": "^0.3.0",
-    "when": "3.7.4",
-    "xml2js": "0.4.13"
-  },
-  "optionalDependenices": {
-    "serialport": "^4.0.7",
-    "firmata": "^0.17.0"
-  },
+  "dependencies": {},
   "homepage": "https://github.com/iceddev/pagenodes-nodes#readme"
 }
